--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "run": "node dist/api/transactions/transactions.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@covalenthq/client-sdk": "^0.8.5",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "uuid": "^9.0.1",
     "web3": "^4.4.0"
   },
   "devDependencies": {
